2003-12-29  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/xml/repr-io.c (sp_repr_svg_read_node): Parse nsDef-s inot
	xmlns:prefix attributes
	(sp_repr_do_read): Do not process namespaces separately as these are now
	normal attributes

	* src/document.c (sp_document_get_abstime): New helper
	(sp_document_begin): New method
	(sp_document_end): Ditto
	(sp_document_get_time): Ditto
	(sp_doc_timer_compare): New helper
	(sp_document_add_timer): New method
	(sp_document_remove_timer): Ditto
	(sp_document_set_timer): Ditto
	(sp_document_idle_handler): Moved here
	(sp_document_schedule_timers): New helper

	* src/sp-defs.c (sp_defs_remove_child): Detach child properly, removes
	warning about invalid object

2003-12-28  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/sodipodi.c (sodipodi_eventcontext_set): Handle action
	activation/desactivation here instead of toolbox

2003-12-27  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/sp-gradient.c (sp_gradient_set_units): Mark units as set

2003-12-24  Mitsuru Oka  <oka326@parkcity.ne.jp>

	* src/sp-text.c (sp_string_set_shape): Fixed bug which was lack of
	incrementing cp value

2003-12-23  Mitsuru Oka  <oka326@parkcity.ne.jp>

	* src/event-context.c (menu_position_handler): New function
	(sp_event_root_menu_popup): Make menu popup easy and usable
	
	* src/sp-text.c: Full support for SP_TEXT_NEW_CONTENT, we can handle
	text object as UCS string/NRPGL glyph string
	(sp_repr_set_content_ucs2): New function

	* src/sp-text.h (SPStirng::pgl): New stuff

	* src/libarikkei/arikkei-strlib.c (arikkei_ucs2_strncpy): New
	function

	* src/libarikkei/arikkei-strlib.h: Ditto

	* src/libnrtype/nr-glyphs.c (nr_pgl_set_origin): New method

	* src/libnrtype/nr-glyphs.h: Ditto

2003-12-23  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/api.h: New file

2003-12-22  Mitsuru Oka  <oka326@parkcity.ne.jp>

	* src/libnr/nr-rect.c (nr_rect_d_translate_xy): New function
	(nr_rect_f_translate_xy): Ditto

	* src/libnr/nr-rect.h: Ditto
